--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "axios": "^1.13.2",
+    "mongoose": "^9.1.5",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.69.0",
+    "react-hot-toast": "^2.6.0",
+    "react-toastify": "^11.0.5",
     "zod": "^4.2.1"
   },
   "devDependencies": {
