--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@hookform/resolvers": "^5.2.2",
     "axios": "^1.13.2",
     "mongoose": "^9.1.5",
-    "next": "16.1.1",
+    "next": "^16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.69.0",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
     "zod": "^4.2.1"
   },
