--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
-    "axios": "^1.13.2",
+    "axios": "^1.13.5",
     "mongoose": "^9.1.5",
     "next": "^16.1.6",
     "react": "19.2.3",
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.69.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.13.0",
     "react-toastify": "^11.0.5",
     "zod": "^4.2.1"
   },
